--- a/cluckies/styles/Landing.module.css
+++ b/cluckies/styles/Landing.module.css
@@ -6,58 +6,47 @@
     flex-direction: column;
     font-size: 5rem;
     text-shadow: -5px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    background-image: url('/background.png');
+    /* background-image: url('/LandingPageAssets/Page 1/background.png'); */
+    background-color: rbg(0,1,0);
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    background-position-y: 60%;
 }
 
-.title {
+.container {
+    height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 10rem;
-    font-family: 'Pixel2';
+    justify-content: flex-end;
+    align-items: flex-start;
+    flex-direction: column;
+    margin: calc((100vh/1080)*120) 0;
 }
 
-.buttonsWrapper {
-    margin-top: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 15vh;
+.cluckie {
+    width: 10%;
 }
 
-.buttonsWrapper > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-
-    margin: 1rem 2rem;
-    padding: 0.5rem 1rem;
-    font-size: 5rem;
-    font-family: 'Pixel';
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+.redEyes {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('/LandingPageAssets/Page 1/EyesPage1.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 10;
+    animation: blink 5s infinite ease-in-out;
 }
 
-.buttonsWrapper > div:hover {
-    color: rgba(240, 248, 255, 0.66);
-}
-
-.socials {
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin: 0 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5rem;
-    font-family: 'Pixel';
-    gap: 1.5rem;
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
