--- a/cluckies/styles/Landing.module.css
+++ b/cluckies/styles/Landing.module.css
@@ -14,26 +14,34 @@
 }
 
 .backgroundImgP1 {
-    background-image: url('/LandingPageAssets/Page 1/bgP1.png');
+    background-image: url('/LandingPageAssets/Page 1/backgroundPage1.png');
 }
 
 .backgroundImgP2 {
-    background-image: url('/LandingPageAssets/Page2/bgP2.png');
+    background-image: url('/LandingPageAssets/Page2/backgroundPage2.png');
 }
 
 .container {
     height: 100%;
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    flex-direction: column;
-    margin: calc((100vh/1080)*140) 0;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    align-items: end;
+    z-index: 1;
 }
 
 .cluckie {
     width: 10%;
     transition: transform 0.1s ease-out;
+}
+
+.land {
+    height: 150px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .redEyes {
@@ -43,7 +51,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: 10;
+    z-index: 0;
     animation: blink 5s infinite ease-in-out;
 }
 
@@ -65,4 +73,15 @@
     100% {
         opacity: 1;
     }
+}
+
+.instructionsContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
