--- a/cluckies/styles/Mint.module.css
+++ b/cluckies/styles/Mint.module.css
@@ -103,3 +103,12 @@
         opacity: 1;
     }    
 }
+
+.afterMintAnimation {
+    position: absolute;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    image-rendering: pixelated;
+    top: -10%;
+}
