--- a/cluckies/styles/Mint.module.css
+++ b/cluckies/styles/Mint.module.css
@@ -110,5 +110,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 100;
     image-rendering: pixelated;
-    top: -10%;
+    top: 50%;  
+    left: 50%; 
+    transform: translate(-50%, -50%);
 }
